# kd

./: .buildinfo  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LEARNINGS.md  LICENSE  README.md  RESEARCH.md  api.html  app.py  conftest.py  deeprl_toturial.html  deeprlpinn_toturial.html  dlga_toturial.html  environment.yml  genindex.html  getting_started.html  index.html  knowledge mining.drawio  launching.py  nohup.out  objects.inv  pde_backends.html  py-modindex.html  pyproject.toml  quick_start.html  quick_start.ipynb  requirements.txt  search.html  searchindex.js  test_config.json  viz.html
.github/workflows/: docs.yml
TASKS/: INDEX.md
TASKS/eqgpt-viz/: task.md
_modules/: index.html
_modules/kd/: base.html  data.html  dataset.html
_sources/: api.rst.txt  getting_started.rst.txt  index.rst.txt  pde_backends.rst.txt  viz.rst.txt
docs/: Makefile  build.sh  make.bat  viz_helpers.md
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  pde_backends.rst
example_experiment/: index.json
example_experiment/regression_tlc_cc_t1/: result.json
example_experiment/regression_tlc_cc_t2/: result.json
examples/: README.md  _bootstrap.py  _gallery_gen.py  _nd_data.py  deeprl_toturial.ipynb  deeprl_tutorial_script.py  deeprlpinn_toturial.ipynb  discover_example.py  discover_regression_example.py  discover_spr_example.py  dlga_example.py  dlga_toturial.ipynb  dlga_tutorial.py  dscv_example.py  dscv_spr_example.py  eqgpt_example.py  kd_dlga_example.py  kd_dlga_minimal.py  kd_dlga_toturial.ipynb  kd_dlga_viz_api_example.py  kd_dscv_dataset_example.py  kd_dscv_example.py  kd_dscv_minimal.py  kd_dscv_nd_example.py  kd_dscv_nd_viz_api_example.py  kd_dscv_spr_dataset_example.py  kd_dscv_viz_api_example.py  kd_dscvpinn_example.py  kd_dscvspr_example.py  kd_dscvspr_minimal.py  kd_dscvspr_nd_example.py  kd_dscvspr_nd_viz_api_example.py  kd_dscvspr_viz_api_example.py  kd_pysr_example.py  kd_pysr_minimal.py  kd_sga_custom_example.py  kd_sga_dataset_example.py  kd_sga_example.py  kd_sga_minimal.py  kd_sga_nd_example.py  (+10 more)
examples/equations/: run_Burgers.py
kd/: __init__.py  app_helpers.py  base.py  data.py  job.py  runner.py
kd/dataset/: __init__.py  _base.py  _info.py  _registry.py
kd/model/: __init__.py  _base.py  deeprl.py  dlga.py  dlga_old.py  kd_discover.py  kd_discover_regression.py  kd_dlga.py  kd_dscv.py  kd_eqgpt.py  kd_pysr.py  kd_sga.py
kd/model/sga/: .gitignore  INTEGRATION_COMPLETE.md  README.md  adapter.py  chafee-infante_sine_sin_50_3fc2_100k_Adam.pkl  main.py  pyproject.toml  todo.md
kd/model/sga/codes/: Data_generator.py  MetaNN_generator.py  PDE_find.py  configure.py  pde.py  setup.py  sga.py  tree.py
kd/model/sga/data/: README.md
kd/model/sga/scripts/: MetaNN_generator.py
kd/model/sga/sga_refactored/: data_utils.py  diagnostics.py  kd_sga.py  main.py  operators.py  workflow.py
kd/model/sga/sgapde/: PDE_find.py  config.py  context.py  equation.py  metann.py  naming.py  pde.py  solver.py  tree.py  visualizer.py
kd/model/sga/tests/: diagnostics_debug.txt  test_data_utils.py  test_diagnostics.py  test_import_side_effects.py  test_inject_dependencies.py  test_integration_final.py  test_kd_sga.py  test_operators.py  test_unified_data_integration.py  ut_golden.npy  ux_golden.npy  uxx_golden.npy  uxxx_golden.npy
kd/plot/: DESIGN.md  config.py  dev_log.md  hooks.py
kd/tests/: test_deeprl_adapter.py  test_deeprl_hook.py  test_direct_plot.py  test_discover_eq2latex.py  test_dlga_eq2latex.py  test_dlga_hook.py  test_dlga_integration.py  test_dlga_monitor.py  test_eq_cases.py  test_evolution.py  test_evolution_basic.py  test_evolution_output.py  test_evolution_performance.py  test_evolution_snapshot.py  test_metadata_plane.py  test_monitor_utils.py  test_pde_comparison.py  test_pdes2latex.py  (+2 more)
log/: _1_pretrain.ckpt  _pretrain.ckpt
tests/: diagnostics_golden.txt  kd_dlga_test.py  test_all_combos.py  test_app_helpers.py  test_dataset_loader.py  test_diff2_3_equivalence.py  test_discover_adapter.py  test_discover_density.py  test_discover_notation.py  test_discover_regression.py  test_discover_regression_viz.py  test_dscv_adapter.py  test_dscv_density.py  test_eqgpt_migrate.py  test_eqgpt_viz.py  test_eqgpt_wrapper.py  test_examples_smoke.py  test_fix_diff2_3.py  test_kd_pysr_viz_smoke.py  test_kd_sga_dataset.py  test_laplace_3.py  test_model_dataset_matrix.py  test_nd_examples_smoke.py  test_param_fields.py  test_sga_division_strategy.py  test_sga_notation.py  test_unified_loader.py  test_viz_adapters.py  test_viz_api.py  test_viz_core.py  test_viz_nd.py
(+193 files in other folders)
