[project]
name = "kd"
version = "1.0.0"
description = "Knowledge discover and plotting framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "S.A.I.L." }
]

dependencies = [
]

[project.optional-dependencies]
# PySR 为可选依赖：只有在需要 KD_PySR 时才安装。
pysr = [
  "pysr"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: quick sanity checks",
    "unit: isolated function tests",
    "integration: component interaction tests",
    "equivalence: reference implementation comparison",
    "slow: tests that take >10s",
    "dataset: tests requiring dataset files",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"kd.dataset" = ["data/*.mat", "data/*.csv", "data/*.npy", "data/*.txt"]
