[project]
name = "kd"
version = "1.0.0"
description = "Knowledge Discovery Framework for PDE Equations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "S.A.I.L." }
]

dependencies = [
    "numpy>=1.21",
    "torch>=1.10",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "scikit-learn>=1.0",
    "sympy>=1.9",
    "commentjson",
    "tqdm",
    "pandas",
    "numba>=0.56",
    "dill",
    "pyDOE",
    "tensorboard",
]

[project.optional-dependencies]
pysr = ["pysr"]
viz = ["seaborn", "graphviz", "Pillow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: quick sanity checks",
    "unit: isolated function tests",
    "integration: component interaction tests",
    "equivalence: reference implementation comparison",
    "slow: tests that take >10s",
    "dataset: tests requiring dataset files",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kd*"]

[tool.setuptools.package-data]
"kd.dataset" = ["data/*.mat", "data/*.csv", "data/*.npy", "data/*.txt"]
